# python-exersises

./: README.md
CodeWar/: Find _the_odd_int.py  anagrams .py  array-substruct.py  bit_counting.py  boolean_switch_XOR_walrus.py  categorize_new_member.py  convert_number_to_reversed_array.py  exes_and_ohs.py  find_the_parity_outlier.py  get_pivot_from_string.py  is_isogram.py  list_natural_numbers.py  persistence.py  play_banjo.py  seconds.py  string_exercises.py  string_sort_according_number.py  sum_of_range.py  words_spinner.py
InterviewQuestions/: BlueVine.py  car_capacity_rides.py  detect_attack.py  ex1.py  (+11 more)
celery_workshop/: pyproject.toml  server.py  setup.sh
celery_workshop/00-My_First_Task/: main.py  our_celery_app.py  tasks.py  worker_stater.py
celery_workshop/01-Getting_The_Result/: celery_backend.sqlite  main.py  our_celery_app.py  tasks.py  worker_stater.py
celery_workshop/03-Lets_Group_It/: celery_backend.sqlite  main.py  tasks.py
celery_workshop/04-Celery_and_I/celery_utils/: base_app_with_database.py  base_group.py  base_task_with_database.py  celery_config.py  status_enum.py  utils.py
celery_workshop/04-Celery_and_I/celery_utils/db/: __init__.py
celery_workshop/04-Celery_and_I/celery_utils/db/dal/: task.py
celery_workshop/04-Celery_and_I/celery_utils/db/tables/: __init__.py  _base.py  task_result.py  task_table.py
celery_workshop/04-Celery_and_I/crypto_server/: celery_conf.py  main.py  rsa_cracker.py  tasks.py
celery_workshop/04-Celery_and_I/hacker_server/: main.py
celery_workshop/04-Celery_and_I/shared/: shared_conf.py  tasks.py
(+160 files in other folders)
